--- a/_data/google-chrome.yml
+++ b/_data/google-chrome.yml
@@ -2,163 +2,163 @@ name: Google Chrome
 version: 46.0.2490.80 (64-bit)
 
 general:
-  - shortcut: ⌘,
+  - shortcut: '⌘,'
     desc: Preferences
 
-  - shortcut: ⇧⌘⌫
+  - shortcut: '⇧⌘⌫'
     desc: Clear Browsing Data
 
-  - shortcut: ⌘T
+  - shortcut: '⌘T'
     desc: New Tab
 
-  - shortcut: ⌘N
+  - shortcut: '⌘N'
     desc: New Window
 
-  - shortcut: ⇧⌘N
+  - shortcut: '⇧⌘N'
     desc: New Incognito Window
 
-  - shortcut: ⇧⌘T
+  - shortcut: '⇧⌘T'
     desc: Reopen Closed Tab
 
-  - shortcut: ⌘O
+  - shortcut: '⌘O'
     desc: Open File
 
-  - shortcut: ⌘L
+  - shortcut: '⌘L'
     desc: Open Location
 
-  - shortcut: ⇧⌘W
+  - shortcut: '⇧⌘W'
     desc: Close Window
 
-  - shortcut: ⌘W
+  - shortcut: '⌘W'
     desc: Close Tab
 
-  - shortcut: ⌘S
+  - shortcut: '⌘S'
     desc: Save Page As
 
-  - shortcut: ⇧⌘I
+  - shortcut: '⇧⌘I'
     desc: Email Page Location
 
-  - shortcut: ⌘P
+  - shortcut: '⌘P'
     desc: Print
 
 edit:
-  - shortcut: ⌘Z
+  - shortcut: '⌘Z'
     desc: Undo
 
-  - shortcut: ⇧⌘Z
+  - shortcut: '⇧⌘Z'
     desc: Redo
 
-  - shortcut: ⌘X
+  - shortcut: '⌘X'
     desc: Cut
 
-  - shortcut: ⌘C
+  - shortcut: '⌘C'
     desc: Copy
 
-  - shortcut: ⌘V
+  - shortcut: '⌘V'
     desc: Paste
 
-  - shortcut: ⇧⌘V
+  - shortcut: '⇧⌘V'
     desc: Paste and Match Style
 
-  - shortcut: ⌘A
+  - shortcut: '⌘A'
     desc: Select All
 
-  - shortcut: ⌃⌘Space
+  - shortcut: '⌃⌘Space'
     desc: Emoji & Symbols
 
 find:
-  - shortcut: ⌥⌘F
+  - shortcut: '⌥⌘F'
     desc: Search the Web
 
-  - shortcut: ⌘F
+  - shortcut: '⌘F'
     desc: Find
 
-  - shortcut: ⌘G
+  - shortcut: '⌘G'
     desc: Find Next
 
-  - shortcut: ⇧⌘G
+  - shortcut: '⇧⌘G'
     desc: Find Previous
 
-  - shortcut: ⌘E
+  - shortcut: '⌘E'
     desc: Use Selection for Find
 
-  - shortcut: ⌘J
+  - shortcut: '⌘J'
     desc: Jump to Selection
 
 spelling and grammer:
-  - shortcut: ⌘:
+  - shortcut: '⌘:'
     desc: Show Spelling and Grammar
 
-  - shortcut: ⌘;
+  - shortcut: '⌘;'
     desc: Check Document Now
 
 view:
-  - shortcut: ⇧⌘B
+  - shortcut: '⇧⌘B'
     desc: Always Show Bookmarks Bar
 
-  - shortcut: ⌘.
+  - shortcut: '⌘.'
     desc: Stop
 
-  - shortcut: ⌘R
+  - shortcut: '⌘R'
     desc: Reload Page
 
-  - shortcut: ⇧⌘F
+  - shortcut: '⇧⌘F'
     desc: Toggle Presentation Mode
 
-  - shortcut: ⌃⌘F
+  - shortcut: '⌃⌘F'
     desc: Toggle Fullscreen
 
-  - shortcut: ⌘0
+  - shortcut: '⌘0'
     desc: Actual Size
 
-  - shortcut: ⌘+
+  - shortcut: '⌘+'
     desc: Zoom In
 
-  - shortcut: ⌘-
+  - shortcut: '⌘-'
     desc: Zoom Out
 
 developer:
-  - shortcut: ⌥⌘U
+  - shortcut: '⌥⌘U'
     desc: View Source
 
-  - shortcut: ⌥⌘I
+  - shortcut: '⌥⌘I'
     desc: Developer Tools
 
-  - shortcut: ⌥⌘J
+  - shortcut: '⌥⌘J'
     desc: JavaScript Console
 
 history:
-  - shortcut: ⇧⌘H
+  - shortcut: '⇧⌘H'
     desc: Home
 
-  - shortcut: ⌘[
+  - shortcut: '⌘['
     desc: Back
 
-  - shortcut: ⌘]
+  - shortcut: '⌘]'
     desc: Forward
 
-  - shortcut: ⌘Y
+  - shortcut: '⌘Y'
     desc: Show Full History
 
 bookmarks:
-  - shortcut: ⌥⌘B
+  - shortcut: '⌥⌘B'
     desc: Bookmark Manager
 
-  - shortcut: ⌘D
+  - shortcut: '⌘D'
     desc: Bookmark This Page
 
-  - shortcut: ⇧⌘D
+  - shortcut: '⇧⌘D'
     desc: Bookmark All Tabs
 
 window:
-  - shortcut: ⌘M
+  - shortcut: '⌘M'
     desc: Minimize
 
-  - shortcut: ⌥⌘→
+  - shortcut: '⌥⌘→'
     desc: Select Next Tab
 
-  - shortcut: ⌥⌘←
+  - shortcut: '⌥⌘←'
     desc: Select Previous Tab
 
-  - shortcut: ⇧⌘J
+  - shortcut: '⇧⌘J'
     desc: Downloads
