Fixes capitalization of a shortcut for consistency.

--- a/_data/twitter-web.yml
+++ b/_data/twitter-web.yml
@@ -52,7 +52,7 @@ navigation:
   - shortcut: 'K'
     desc: Previous Tweet
 
-  - shortcut: 'SPACE'
+  - shortcut: 'Space'
     desc: Page Down
 
   - shortcut: '.'
