--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: ruby
 rvm:
 - 2.1
 
-before_script:
- - chmod +x ./script/ciyaml # or do this locally and commit
-
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
-script: ./script/ciyaml
+script:
+  - bundle exec yaml-lint _data/
 
 branches:
   only:
