--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -11,4 +11,4 @@
   url: "http://ursooperduper.github.io/archive"
 
 - name: "Cheatsheets"
-  url: "{{ site.baseurl }}"
+  url: "http://ursooperduper.github.io/cheatsheets"
