Fixes errors in YAML files.

--- a/_data/dropbox.yml
+++ b/_data/dropbox.yml
@@ -45,5 +45,5 @@ file actions:
   - shortcut: ⌘ Z
     desc: Undo Recent Move/Copy/Rename/Delete
 
-  - shortcut: ?
+  - shortcut: '?'
     desc: Show Keyboard Shortcuts
