--- a/_data/tweetdeck.yml
+++ b/_data/tweetdeck.yml
@@ -21,7 +21,7 @@ global:
   - shortcut: ⎋
     desc: Close Pop-up / Cancel Search
 
-  - shortcut: ?
+  - shortcut: '?'
     desc: Show Keyboard Shortcuts
 
 navigation:
