Fixes problem with application wide heading.

--- a/_data/evernote.yml
+++ b/_data/evernote.yml
@@ -22,7 +22,7 @@ global:
   - shortcut: ⌃ ⌘ E
     desc: Search in Evernote
 
-app-wide:
+application wide:
   - shortcut: ⌘ N
     desc: New Note
 
